--- a/public/index.html
+++ b/public/index.html
@@ -2,22 +2,31 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="./images/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Simple PWA site for Checking the weather of any city using the open weather api."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
- 
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="apple-touch-icon" href="./images/logo.png" />
+ <link rel="manifest" href="./manifest.json"/>
+  
 
-    <title>React App</title>
+    <title>City Weather Check App</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    
     <div id="root"></div>
+    <script>
+      if('serviceWorker' in navigator){
+        window.addEventListener('load', ()=>{
+          navigator.serviceWorker.register('./serviceworker.js')
+          .then((registration)=>console.log('Success:', registration.scope))
+          .catch((error)=>console.log('Failure:', error))
+        })
+      }
+    </script>
 
   </body>
 </html>
