--- a/public/index.html
+++ b/public/index.html
@@ -11,12 +11,7 @@
     />
     <link rel="apple-touch-icon" href="./images/logo.png" />
  <link rel="manifest" href="./manifest.json"/>
- <link
- rel="stylesheet"
- href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
- integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
- crossorigin="anonymous"
-/>
+ <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
     <title>City Weather Check App</title>
   </head>
