--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
  <link rel="manifest" href="./manifest.json"/>
  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
 
-    <title>City Weather Check App</title>
+    <title>City Weather Checker</title>
   </head>
   <body>
     
