--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,11 @@
       name="description"
       content="Simple PWA site for Checking the weather of any city using the open weather api."
     />
+    <meta content="yes" name="apple-mobile-web-app-capable" />
+      <meta content="minimum-scale=1.0, width=device-width, maximum-scale=1, user-scalable=no" name="viewport" />
     <link rel="apple-touch-icon" href="./images/logo.png" />
  <link rel="manifest" href="./manifest.json"/>
- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
+
 
     <title>City Weather Checker</title>
   </head>
