css, layout and functionality changes

--- a/public/index.html
+++ b/public/index.html
@@ -3,16 +3,16 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="./images/logo.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5" />
 
     <meta
       name="description"
       content="Simple PWA site for Checking the weather of any city using the open weather api."
     />
-    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"> -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="apple-touch-icon" href="./images/logo.png" />
  <link rel="manifest" href="./manifest.json">
-
+<meta name="theme-color"  content="#74C3CC">
 
     <title>City Weather Checker</title>
   </head>
@@ -31,4 +31,4 @@
 
   </body>
 </html>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+
